--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <style>* {padding: 0; margin: 0}</style>
 </head>
   <script src="js/lib/pixi.js"></script>
+  <script src="js/lib/pixi-sound.js"></script>
   <script src="js/game/main.js" type="module"></script>
 <body>
   
