--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Hello World</title>
+  <title>Postman</title>
   <style>* {padding: 0; margin: 0}</style>
 </head>
   <script src="js/lib/pixi.js"></script>
