--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Postman</title>
-  <style>* {padding: 0; margin: 0}</style>
+  <style>
+    * {
+      padding: 0;
+      margin: 0
+    }
+  </style>
 </head>
-  <script src="js/lib/pixi.js"></script>
-  <script src="js/lib/pixi-sound.js"></script>
-  <script src="js/game/main.js" type="module"></script>
+<script src="js/lib/pixi.js"></script>
+<script src="js/lib/pixi-sound.js"></script>
+<script src="js/game/main.js" type="module"></script>
+
 <body>
-  
-  
+
+
 </body>
+
 </html>
